[package]
name = "aoc_naalunth_2020"
version = "0.1.0"
authors = ["Naalunth <me@naalunth.dev>"]
edition = "2018"

[lib]
bench = false

[dependencies]
anyhow = "1.0.34"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bstr = "0.2.14"
btoi = "0.4.2"
bytecount = "0.6.2"
fnv = "1.0.7"
itertools = "0.9.0"
nalgebra = "0.23.1"
nom = { version = "6.0.1", features = ["alloc"] }
num = "0.3.1"
num-traits = "0.2.14"
ordered-float = "2.0.0"

[profile.release]
lto = true
debug = true

[profile.bench]
lto = true
